--- a/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
@@ -1,11 +1,8 @@
 <div class="google-dfp-ad-label"><h2>ADVERTISEMENT</h2></div>
 <div id='{{divId}}' style='height:90px; width:728px;' class="dfp-ad-unit">
-  <script type='text/javascript'>
-    if (window.googletag !== undefined) {
+  {{#if loadedGoogletag}}
+    <script type='text/javascript'>
       googletag.cmd.push(function() { googletag.display('{{divId}}'); });
-    } else {
-      // TODO: how to handle this case?
-      console.log('googletag not loaded yet');
-    }
-  </script>
+    </script>
+  {{/if}}
 </div>
