mobile ad units

--- a/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
@@ -1,5 +1,5 @@
 <div class="google-dfp-ad-label"><h2>ADVERTISEMENT</h2></div>
-<div id='{{divId}}' style='height:90px; width:728px;' class="dfp-ad-unit">
+<div id='{{divId}}' style='{{fixedSize}}' class="dfp-ad-unit">
   {{#if loadedGoogletag}}
     <script type='text/javascript'>
       googletag.cmd.push(function() { googletag.display('{{divId}}'); });
