--- a/assets/javascripts/discourse/templates/connectors/topic-above-post-stream/discourse-google-dfp.hbs
+++ b/assets/javascripts/discourse/templates/connectors/topic-above-post-stream/discourse-google-dfp.hbs
@@ -1,3 +1,9 @@
-{{#if siteSettings.dfp_show_topic_top}}
-  {{google-dfp-ad placement="topic-top"}}
+{{#if site.mobileView}}
+  {{#if siteSettings.dfp_mobile_show_topic_top}}
+    {{google-dfp-ad placement="topic-top"}}
+  {{/if}}
+{{else}}
+  {{#if siteSettings.dfp_show_topic_top}}
+    {{google-dfp-ad placement="topic-top"}}
+  {{/if}}
 {{/if}}
