Added category as ad channel

--- a/assets/javascripts/discourse/templates/connectors/discovery-list-container-top/discourse-google-dfp.hbs
+++ b/assets/javascripts/discourse/templates/connectors/discovery-list-container-top/discourse-google-dfp.hbs
@@ -1,9 +1,9 @@
 {{#if site.mobileView}}
   {{#if siteSettings.dfp_mobile_show_topic_list_top}}
-    {{google-dfp-ad placement="topic-list-top"}}
+    {{google-dfp-ad placement="topic-list-top" category=category}}
   {{/if}}
 {{else}}
   {{#if siteSettings.dfp_show_topic_list_top}}
-    {{google-dfp-ad placement="topic-list-top"}}
+    {{google-dfp-ad placement="topic-list-top" category=category}}
   {{/if}}
 {{/if}}
