--- a/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
+++ b/assets/javascripts/discourse/templates/components/google-dfp-ad.hbs
@@ -2,7 +2,8 @@
 <div id='{{divId}}' style='{{fixedSize}}' class="dfp-ad-unit">
   {{#if loadedGoogletag}}
     <script type='text/javascript'>
-      googletag.cmd.push(function() { googletag.display('{{divId}}'); });
+      var divId = document.currentScript.parentNode.id;
+      googletag.cmd.push(function() { googletag.display(divId); });
     </script>
   {{/if}}
 </div>
